// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when generating id indexes for core namespace table with no type should generate correct id index 1`] = `
"BEGIN TRANSACTION
    IF NOT EXISTS (SELECT * FROM sys.indexes WHERE object_id = OBJECT_ID(N'edfi.TableName') AND name = N'UX_TableName_Id')
    CREATE UNIQUE NONCLUSTERED INDEX UX_TableName_Id ON [edfi].[TableName]
    (Id) WITH (PAD_INDEX = ON, FILLFACTOR = 75, STATISTICS_NORECOMPUTE = OFF) ON [PRIMARY]
    GO
COMMIT

"
`;

exports[`when generating id indexes for core namespace table with type should generate correct id index 1`] = `
"BEGIN TRANSACTION
    IF NOT EXISTS (SELECT * FROM sys.indexes WHERE object_id = OBJECT_ID(N'edfi.TableNameType') AND name = N'UX_TableNameType_Id')
    CREATE UNIQUE NONCLUSTERED INDEX UX_TableNameType_Id ON [edfi].[TableNameType]
    (Id) WITH (PAD_INDEX = ON, FILLFACTOR = 100, STATISTICS_NORECOMPUTE = OFF) ON [PRIMARY]
    GO
COMMIT

"
`;

exports[`when generating id indexes for extension namespace table with no type should generate correct id index 1`] = `
"BEGIN TRANSACTION
    IF NOT EXISTS (SELECT * FROM sys.indexes WHERE object_id = OBJECT_ID(N'extension.TableName') AND name = N'UX_TableName_Id')
    CREATE UNIQUE NONCLUSTERED INDEX UX_TableName_Id ON [extension].[TableName]
    (Id) WITH (PAD_INDEX = ON, FILLFACTOR = 75, STATISTICS_NORECOMPUTE = OFF) ON [PRIMARY]
    GO
COMMIT

"
`;
